<resources>
    <string name="app_name">Get Organized</string>
    <string name="empty_recyclerview_text">Your plans for %1$s show up here !</string>
    <string name="task_long_click_hint">Long Click on a task for more options.</string>
    <string name="how_to_set_the_alarm_off">How to set the alarm off:</string>
    <string name="description_of_the_task">Description of the task</string>
    <string name="type_of_task">Type of Task:</string>
    <string name="time_title">Time :</string>
    <string name="days_case_title">Days :</string>
    <string name="save">SAVE</string>
    <string name="task_type_wake_up">Wake Up</string>
    <string name="task_type_work">Work</string>
    <string name="task_type_sport">Sport</string>
    <string name="task_type_sleep">Sleep</string>
    <string name="task_type_family">Family</string>
    <string name="task_type_shopping">Shopping</string>
    <string name="task_type_social">Social</string>
    <string name="task_type_other">Other</string>
    <string name="monday_long">Monday</string>
    <string name="tuesday_long">Tuesday</string>
    <string name="wednesday_long">Wednesday</string>
    <string name="thursday_long">Thursday</string>
    <string name="friday_long">Friday</string>
    <string name="saturday_long">Saturday</string>
    <string name="sunday_long">Sunday</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="cm_option_edit">Edit</string>
    <string name="cm_option_delete_for_this_day">Delete for this day</string>
    <string name="cm_option_delete_for_everyday">Delete for everyday</string>
    <string name="cm_option_edit_todos">To-Do\'s</string>
    <string name="send_a_notification">Send a notification :</string>
    <string name="send_an_alarm">Send an alarm :</string>
    <string name="ringtone">Ringtone :</string>
    <string name="ringtone_option_very_easy">Very easy to wake up</string>
    <string name="ringtone_option_easy">Easy to wake up</string>
    <string name="ringtone_option_hard">Hard to wake up</string>
    <string name="ringtone_option_very_hard">Very hard to wake up</string>
    <string name="aot_button">Button</string>
    <string name="aot_math">Solve Math Problem</string>
    <string name="notif_title_sport">Sport time</string>
    <string name="notif_title_work">Work time</string>
    <string name="notif_title_sleep">Sleep time</string>
    <string name="motivational_quote_1">"Hard work beats talent when talent doesn’t work hard.” – Tim Notke</string>
    <string name="motivational_quote_2">“It’s hard to beat a person who never gives up.” – Babe Ruth</string>
    <string name="motivational_quote_3">“The harder the battle, the sweeter the victory.” – Les Brown</string>
    <string name="motivational_quote_4">“Never say never because limits, like fears, are often just an illusion.” – Michael Jordan</string>
    <string name="motivational_quote_5">“You miss 100% of the shots you don’t take.” – Wayne Gretzky</string>
    <string name="motivational_quote_6">“You have to expect things of yourself before you can do them.” – Michael Jordan</string>
    <string name="to_do_title_et">To-Do\'s title</string>
    <string name="todo_description_et">Give a description</string>
    <string name="priority_add_todo">Priority :</string>
    <string name="todo_add_prio_high">High</string>
    <string name="todo_add_prio_med">Medium</string>
    <string name="todo_add_prio_low">Low</string>
    <string name="new_todo">New To-Do :</string>
    <string name="about_app_title_str">About The App</string>
    <string name="about_app_description_title">Description :</string>
    <string name="about_app_descriptio_body">\"Get Organized\" is a simple app made for you to organize your week in the most efficient, convenient and nice looking way. If you have trouble staying organized and productive, this is the app you need.</string>
    <string name="about_app_features_title">Features :</string>
    <string name="about_app_features_body_1">The way this app works is by allowing you to divide your day into several tasks and make it look clear for you.</string>
    <string name="about_app_features_task_annotation">Example of a task</string>
    <string name="about_app_features_body_2">There are different types of task you can choose from : \"Wake up\", \"Work\", \"Sport\", \"Sleep\" and \"Other\". With each type comes different icons and specific aspects. The above task is of type \"Work\" with which comes a customizable list of To-Do\'s that you can access from the menu that opens when you long-click on a task.</string>
    <string name="about_app_todo_image_anotation">Example of a list of To-Do\'s</string>
    <string name="about_app_feature_body_3">A To-Do has a title, a description and a priority. When you first look at your list, you only see your To-Do\'s name and priority (represented by a colorful circle) but you can expand it simply by clicking on it, then revealing the description and a DONE button which you can click to delete the To-Do.</string>
    <string name="advice_work_title">Work :</string>
    <string name="advice_work_intro">Being Productive is something really important if you want to build a successful career, if you don\'t feel like you are productive enough, here are some simple tricks that you can apply to improve your productivity :</string>
    <string name="advice_work_1">\t\t\t● Take several small breaks: When you work, every two hours or so, you should take a break of 15 minutes and go outside, take some fresh air, free your mind a bit, this will make working much easier once you go back and will help you solve the problems you are facing.</string>
    <string name="advice_work_2">\t\t\t● Prevent temptation: If you decide to start working on something, put your phone, or anything that could distract you, away. If you work on a computer there are ad-ons you can download to prevent you from going on time-consuming websites (like StayFocusd on Chrome)</string>
    <string name="advice_work_3">\t\t\t● If you have a big project that requires weeks or months of work, you have to build a work habit by forcing you to work (that\'s why this app is here). By doing such, when you lack motivation, this habit will \"force\" you to work as you will feel weird if you don\'t follow it. Note that unlike what you see on most websites, the time it takes to build a habit is around 66 days and not 21, so don\'t blame yourself if it doesn\'t come overnight, just persevere.</string>
    <string name="advice_work_4">\t\t\t● Divide your work: There is nothing more demotivating than not even knowing where to start when you have a huge task to accomplish, so before doing anything, make a plan, this app has a \"To-Do\" functionality that allows you to break your work into smaller pieces and give a priority to each one of them, think about using it as it can be both useful and motivating.</string>
    <string name="advice_sport_title">Sport :</string>
    <string name="advice_sport_intro">Sport is really important, it helps you keep in shape, and has been shown to increase happiness and to prevent a lot of diseases. Yet many people don\'t workout as much as they would like because they lack motivation and/or they don\'t know how to properly do it. Here are some tips to get over that :</string>
    <string name="advice_sport_1">\t\t\t● Don\'t over do it: It is a really bad idea to do a lot of sport everyday, especially if you are not used to it. When you put a lot of pressure onto your body, you need to give it some time to recover, and plus, it\'s during these periods that muscles build up so you need those to see improvement in your performances.</string>
    <string name="advice_sport_2">\t\t\t● Push yourself: if you want to get really good at something that is related to sports, you have to push yourself, it\'s not enough to do it a bit, it needs to hurt, you should feel tired after each session of workout you do, you won\'t improve a lot if you don\'t push your limits. But remember: You should break your limits, not yourself.</string>
    <string name="advice_sport_3">\t\t\t● Follow a program: There are many apps available that were created for you to follow a workout routine and lots of them are really good, with a lot of explanations. A big advantage that comes from these apps is that they are really motivating, mainly because they often come with something to track your stats, which makes it easier to see your improvement, therefore motivating you to work even more.</string>
    <string name="advice_sport_4">\t\t\t● Workout with friends: This is by far the best way to get motivated, gather some friends, make a schedule and follow it. It\'s very unlikely that all of you get demotivated at once, which means there will always be someone to motivate the others to come and workout. Plus it may make you enjoy sport if it wasn\'t the case before.</string>
    <string name="advice_sleep_title">Sleep :</string>
    <string name="advice_sleep_intro">Your quality of life partly comes from your quality of sleep. Yet it is said that 1 in 3 people don\'t get enough sleep. If you are one of these people here are a few simple things you can do that might drastically improve your sleep quality :</string>
    <string name="advice_sleep_1">\t\t\t● Have a schedule: The first thing you should give attention to is your sleep schedule. It is really important that you go to sleep and wake up at the same time everyday, even during week-ends, this helps to set your body\'s internal clock and will improve your sleep quality.</string>
    <string name="advice_sleep_2">\t\t\t● Keep screens away: 30 minutes before you go to bed, shut off every video screens you can and move them to a room that is not your bedroom. They have the effect of stimulating your brain which prevents you from being into a calm state of mind for sleep. Recent studies also show that they might suppress the sleep-inducing hormone (melatonin) in the brain.</string>
    <string name="advice_sleep_3">\t\t\t● Read books: It\'s a really good thing to do as this will exhaust you a bit and therefore will make it easier to fall asleep. But you shouldn\'t read things that require too much thinking as it will have the unwanted effect of stimulating your brain.</string>
    <string name="advice_sleep_4">\t\t\t● Buy an alarm clock: What prevents many people from sleeping without their phone in their bedroom is that they use it as an alarm clock. An alarm clock costs 20\$ and will help you to both fall asleep and to wake up as you won\'t have the temptation to use it in your bed. It may be one of the best investment you can make if you want to improve your sleep quality.</string>
    <string name="contact_us">Contact me:</string>
    <string name="help_us">Support me:</string>
    <string name="help_main_text">As you may have noticed, there are no ads in this app that you are forced to watch. This was done in order to give you the best user experience. If you want to support me the best things you can do are : Talking about the app (on social network or simply by words of mouth), make a review on Google play or watch an Ad from your own free will. Thanks already if you do any of these.</string>
    <string name="google_play">Google Play</string>
    <string name="ad">Ad</string>
    <string name="credits_page_title">Credits :</string>
    <string name="code_design">Code/Design :</string>
    <string name="tom_gautot_credits">\t\t\t● Tom Gautot</string>
    <string name="icons_credits_title">Icons :</string>
    <string name="e_mail_title">E-Mail :</string>
    <string name="email_address">tgautot.contact@gmail.com</string>
    <string name="advices_page_label">Advices</string>
</resources>