<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_advice"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/advices_page_label"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="12dp" />


        <LinearLayout
            style="@style/dimen_add_task_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/work_advice"
                android:layout_margin="8dp"/>


            <TextView
                style="@style/optionArticleTitle"
                android:text="@string/advice_work_title"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:text="@string/advice_work_intro"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_work_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_work_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_work_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_work_4"/>

        </LinearLayout>

        <LinearLayout
            style="@style/dimen_add_task_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/sport_advice"
                android:layout_margin="8dp"/>


            <TextView
                style="@style/optionArticleTitle"
                android:text="@string/advice_sport_title"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:text="@string/advice_sport_intro"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sport_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sport_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sport_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sport_4"/>

        </LinearLayout>


        <LinearLayout
            style="@style/dimen_add_task_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/wake_up_advice"
                android:layout_margin="8dp"/>


            <TextView
                style="@style/optionArticleTitle"
                android:text="@string/advice_sleep_title"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:text="@string/advice_sleep_intro"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sleep_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sleep_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sleep_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:gravity="start"
                android:text="@string/advice_sleep_4"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>