<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_about_app"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/about_app_title_str"
            style="@style/optionPageTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dimen_add_task_layout"
            android:orientation="vertical">

            <TextView
                android:text="@string/about_app_description_title"
                style="@style/optionArticleTitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_descriptio_body"
                style="@style/optionMenuBodyText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dimen_add_task_layout"
            android:orientation="vertical">

            <TextView
                android:text="@string/about_app_features_title"
                style="@style/optionArticleTitle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_features_body_1"
                style="@style/optionMenuBodyText"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_task_sample"
                android:layout_marginTop="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_features_task_annotation"
                style="@style/smallImageAnnotation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_features_body_2"
                style="@style/optionMenuBodyText"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/ic_todo_sample"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/smallImageAnnotation"
                android:text="@string/about_app_todo_image_anotation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:text="@string/about_app_feature_body_3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/dimen_add_task_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_us_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/optionArticleTitle"
                android:text="@string/contact_us"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_us_title"
                    android:text="@string/e_mail_title"
                    style="@style/optionMenuBodyText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/email_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    style="@style/optionMenuBodyText"
                    android:textColor="@color/colorAccent"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
