<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_credits"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/optionPageTitle"
        android:text="@string/credits_page_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/dimen_add_task_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/optionArticleTitle"
            android:text="@string/code_design"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/optionMenuBodyText"
            android:text="@string/tom_gautot_credits"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dimen_add_task_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons_credits_title"
            style="@style/optionArticleTitle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/icon_credit_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scrollbars="vertical"/>

    </LinearLayout>


</LinearLayout>

</ScrollView>