<?xml version="1.0" encoding="utf-8"?>
<ScrollView         xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/help_main_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_help"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/optionPageTitle"
            android:text="@string/help_us"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dimen_add_task_layout">

            <TextView
                android:id="@+id/help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/optionMenuBodyText"
                android:text="@string/help_main_text"/>

            <TextView
                android:id="@+id/google_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:text="@string/google_play"
                android:layout_below="@+id/help_text"
                android:padding="6dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/ad_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorAccentDisabled"
                android:text="@string/ad"
                android:layout_below="@+id/help_text"
                android:layout_toRightOf="@+id/google_play_button"
                android:padding="6dp"
                android:layout_marginLeft="12dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>